<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.views.UpcomingDetails">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_weight="1"
                android:text="@string/details_page_title"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/movie_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="59dp"
                android:layout_weight="1"
                android:gravity="fill"
                android:orientation="horizontal"
                android:showDividers="none">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:text="@string/details_title"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/textViewGenders"
                    app:layout_constraintEnd_toStartOf="@+id/movie_name"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <TextView
                    android:id="@+id/TextViewName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toTopOf="@+id/textViewMovieGenders"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewName"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:gravity="fill"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewGenders"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/gender_label"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/TextViewReleaseDate"
                    app:layout_constraintEnd_toStartOf="@+id/textViewMovieGenders"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewName" />

                <TextView
                    android:id="@+id/textViewMovieGenders"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toTopOf="@+id/textViewMovieReleaseDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/textViewGenders"
                    app:layout_constraintTop_toBottomOf="@+id/movie_name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="fill"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/TextViewReleaseDate"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="9dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="27dp"
                    android:layout_weight="1"
                    android:text="@string/release_date_label"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/textViewOverview"
                    app:layout_constraintEnd_toStartOf="@+id/textViewMovieReleaseDate"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewGenders" />

                <TextView
                    android:id="@+id/textViewMovieReleaseDate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="9dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toTopOf="@+id/textViewMovieOverview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/TextViewReleaseDate"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMovieGenders" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="208dp"
                android:layout_weight="1"
                android:gravity="fill"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewOverview"
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:text="@string/overview_label"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/textViewMovieOverview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/TextViewReleaseDate" />

                <TextView
                    android:id="@+id/textViewMovieOverview"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:singleLine="false"
                    app:layout_constraintBottom_toTopOf="@+id/image_view_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/textViewOverview"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMovieReleaseDate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewPosterDetails"
                    android:layout_width="match_parent"
                    android:layout_height="332dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewMovieOverview"
                    app:srcCompat="@mipmap/ic_launcher" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>